# pacsportal

./: .gitmodules  .gitpod.yml  Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js  tailwind.css
src/: main.rs
src/pages/: home.rs  login.rs  mod.rs  reporting.rs  reporting2.rs  reporting3.rs  search.rs
