[package]
name = "pacsportal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = { git = "http://github.com/Ent4/dicom-rs.git", branch = "master" }
gloo = "0.8.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.103", features = ["preserve_order"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
