[package]
name = "pacsportal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
data-encoding = "2.4.0"
dicom = "0.6.0"
dicom-json = "0.1.0"
gloo = "0.8.1"
pdf-writer = "0.8.0"
postgrest = "1.6.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.103", features = ["preserve_order"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlButtonElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
